{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 88,
  "lineage": "15d83d77-1675-d415-2bf6-c531e30e3277",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07137f1f2245b5277",
            "arn": "arn:aws:ec2:us-east-1:995865250710:elastic-ip/eipalloc-07137f1f2245b5277",
            "domain": "vpc",
            "id": "eipalloc-07137f1f2245b5277",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-16-212.compute-1.amazonaws.com",
            "public_ip": "52.72.16.212",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048404484006d0bb0",
            "arn": "arn:aws:ec2:us-east-1:995865250710:elastic-ip/eipalloc-048404484006d0bb0",
            "domain": "vpc",
            "id": "eipalloc-048404484006d0bb0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-113-71.compute-1.amazonaws.com",
            "public_ip": "18.235.113.71",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-ada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:internet-gateway/igw-0774df2b7b6b0c146",
            "id": "igw-0774df2b7b6b0c146",
            "owner_id": "995865250710",
            "tags": {
              "Name": "gw-ada"
            },
            "tags_all": {
              "Name": "gw-ada",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07137f1f2245b5277",
            "association_id": "eipassoc-090d09e87c2c27b6d",
            "connectivity_type": "public",
            "id": "nat-054169532cb1ceb08",
            "network_interface_id": "eni-04c9fe13bb022c901",
            "private_ip": "10.0.2.54",
            "public_ip": "52.72.16.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04fe91ca8b00c71db",
            "tags": {
              "Name": "NAT-b"
            },
            "tags_all": {
              "Name": "NAT-b",
              "Projeto": "ada",
              "dono": "Flavio"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip-b",
            "aws_internet_gateway.gw-ada",
            "aws_subnet.public-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048404484006d0bb0",
            "association_id": "eipassoc-0740cb55c79b9a46c",
            "connectivity_type": "public",
            "id": "nat-0cd1cdc73e8d718a6",
            "network_interface_id": "eni-07e800c5ff6938342",
            "private_ip": "10.0.3.244",
            "public_ip": "18.235.113.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a29fdfa9b8c6465d",
            "tags": {
              "Name": "NAT-c"
            },
            "tags_all": {
              "Name": "NAT-c",
              "Projeto": "ada",
              "dono": "Flavio"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip-c",
            "aws_internet_gateway.gw-ada",
            "aws_subnet.public-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "banco",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:route-table/rtb-0e48fae2bcb0dd309",
            "id": "rtb-0e48fae2bcb0dd309",
            "owner_id": "995865250710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privadaappb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:route-table/rtb-0faae8524e3a2fc01",
            "id": "rtb-0faae8524e3a2fc01",
            "owner_id": "995865250710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-054169532cb1ceb08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip-b",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway-b",
            "aws_subnet.public-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privadaappc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:route-table/rtb-037098f9ce54bbac9",
            "id": "rtb-037098f9ce54bbac9",
            "owner_id": "995865250710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cd1cdc73e8d718a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip-c",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway-c",
            "aws_subnet.public-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:route-table/rtb-0f4ad49bc71353a0c",
            "id": "rtb-0f4ad49bc71353a0c",
            "owner_id": "995865250710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0774df2b7b6b0c146",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c70878c97f7a463",
            "route_table_id": "rtb-0e48fae2bcb0dd309",
            "subnet_id": "subnet-0f669a2d196f50547"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01192339d3331b56b",
            "route_table_id": "rtb-0e48fae2bcb0dd309",
            "subnet_id": "subnet-099802004b58b228d"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c18e9d68f01f869",
            "route_table_id": "rtb-0e48fae2bcb0dd309",
            "subnet_id": "subnet-0bdbacd41afb65d43"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c62971f6c76141d",
            "route_table_id": "rtb-0f4ad49bc71353a0c",
            "subnet_id": "subnet-0e5b513a2e16a79da"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.public",
            "aws_subnet.public-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae1c21045b7842d6",
            "route_table_id": "rtb-0f4ad49bc71353a0c",
            "subnet_id": "subnet-04fe91ca8b00c71db"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.public",
            "aws_subnet.public-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ea2f72b6e0a823",
            "route_table_id": "rtb-0f4ad49bc71353a0c",
            "subnet_id": "subnet-0a29fdfa9b8c6465d"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.public",
            "aws_subnet.public-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-0f669a2d196f50547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f669a2d196f50547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-a"
            },
            "tags_all": {
              "Name": "dados-a",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-099802004b58b228d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099802004b58b228d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-b"
            },
            "tags_all": {
              "Name": "dados-b",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-0bdbacd41afb65d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdbacd41afb65d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-c"
            },
            "tags_all": {
              "Name": "dados-c",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-0e3f2c0aeedeb5b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3f2c0aeedeb5b04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-007a5d043769b6da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a5d043769b6da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b"
            },
            "tags_all": {
              "Name": "private-b",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-05d4a3d523f347330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d4a3d523f347330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-c"
            },
            "tags_all": {
              "Name": "private-c",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-0e5b513a2e16a79da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5b513a2e16a79da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-04fe91ca8b00c71db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fe91ca8b00c71db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:subnet/subnet-0a29fdfa9b8c6465d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a29fdfa9b8c6465d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995865250710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-c"
            },
            "tags_all": {
              "Name": "public-c",
              "Projeto": "ada",
              "dono": "Flavio"
            },
            "vpc_id": "vpc-0ad1728a7fd9fec1a"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ada_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995865250710:vpc/vpc-0ad1728a7fd9fec1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5ce85109ca36072",
            "default_route_table_id": "rtb-02dbce6d30a4163c6",
            "default_security_group_id": "sg-0d61099c32541b9aa",
            "dhcp_options_id": "dopt-0c4bc81f2e410d565",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad1728a7fd9fec1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02dbce6d30a4163c6",
            "owner_id": "995865250710",
            "tags": {
              "Name": "terraformada",
              "vpc": "ada"
            },
            "tags_all": {
              "Name": "terraformada",
              "Projeto": "ada",
              "dono": "Flavio",
              "vpc": "ada"
            }
          }
        }
      ]
    }
  ]
}